fix buttons on small screens

--- a/assets/styles/buttons.styl
+++ b/assets/styles/buttons.styl
@@ -5,7 +5,7 @@ $button-font-size = 1.125em
 button {
   font-size: $button-font-size;
   padding: 10px 25px;
-  border-radius: 2px
+  border-radius: 2px;
 
   &.primary {
     background: $button-color;
@@ -14,6 +14,7 @@ button {
     transition: all 0.2s
     color: #FFF
     font-weight: 700
+    min-width: 220px;
 
     &:hover {
       background: darken($button-color, 20)
@@ -41,6 +42,7 @@ button {
     border: 2px solid $default-gray;
     overflow: hidden;
     position: relative;
+    min-width: 220px;
     
     * {
       z-index: 20;
